--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Big Poppa Code Starter Kit</title>
+  <title>JEOPARDY!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
 </head>
@@ -11,6 +11,6 @@
 <body>
   <div id="app"></div>
 
-<script type="text/javascript" src="js/dist/vendors~App.95b011cc350ee021fd41.js?c00f5c1b138757db1788"></script><script type="text/javascript" src="js/dist/App.1ba6407b1d209c9a4c73.js?c00f5c1b138757db1788"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?c00f5c1b138757db1788"></script></body>
+<script type="text/javascript" src="js/dist/vendors~App.95b011cc350ee021fd41.js?8cc719388fa66847e4a8"></script><script type="text/javascript" src="js/dist/App.32db2fca8adee3af9dda.js?8cc719388fa66847e4a8"></script><script type="text/javascript" src="js/dist/main.9c581f7864b02165cf18.js?8cc719388fa66847e4a8"></script></body>
 
 </html>
